# AGENT-SOC

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
docs/: input_process_output.md
fixtures/: lanl_sample.csv  paper_alert.json
sprints/: S00_paper_reverse_engineering.md  S01_scaffold_contracts.md  S02_knowledge_store_graph.md  S03_perception_layer.md  S04_nce_layer.md  S05_sse_layer.md  S06_rsem_layer.md  S07_playbook_execution.md  S08_monitoring_closed_loop.md  S09_e2e_benchmark_hardening.md  _TEMPLATE.md
src/agent_soc/: __init__.py  actions.py  artifacts.py  cli.py  config.py  knowledge.py  monitoring.py  perception.py  pipeline.py  reasoning.py  schemas.py
src/agent_soc/llm/: __init__.py  client.py
tests/: conftest.py  test_llm_openai.py  test_s01_scaffold_contracts.py  test_s02_knowledge_store_graph.py  test_s03_perception_layer.py  test_s04_nce_layer.py  test_s05_sse_layer.py  test_s06_rsem_layer.py  test_s07_playbook_execution.py  test_s08_e2e_pipeline.py  test_s09_stress_guards.py
