[project]
name = "agent-soc"
version = "0.1.0"
description = "AgentSOC POC reconstruction: safe dry-run SOC automation pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.0",
    "openai>=1.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
agent-soc = "agent_soc.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_soc"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "llm: tests that call the real OpenAI API and require OPENAI_API_KEY",
    "stress: high-volume tests; must not call the real OpenAI API",
]
